# pygc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  release.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  tests.yml
conda-recipe/: meta.yaml
pygc/: __init__.py  gc.py
pygc/tests/: test_gc.py  test_gd.py  x.npy  y.npy  ymask.npy
tests/: test_gc.py
