[metadata]
name = pygc
description = "Great Circle calculations in Python using Vincenty's formulae"
author = Kyle Wilcox
author_email = kyle@axiomdatascience.com
url = https://github.com/axiom-data-science/pygc
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = True
include_package_data = True
install_requires =
    numpy
python_requires = >=3.6
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml

[tool:pytest]
addopts = -s -rxs -v
flake8-max-line-length = 100
flake8-ignore =
    *.py E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291 W504

[flake8]
max-line-length = 100
per-file-ignores =
    *.py: E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291 W504

[tool:isort]
line_length=100
indent='    '
balanced_wrapping=1
multi_line_output=3
default_section=FIRSTPARTY
use_parentheses=1
reverse_relative=1
length_sort=1
combine_star=1
order_by_type=0
